Solving a bug in registration form (Not showing correctly the error 'Password must be the same' with a so raw animation)

--- a/src/css/Form.css
+++ b/src/css/Form.css
@@ -145,12 +145,12 @@
   }
   
   .error-password-match.on {
-    animation: jump-in 0.5s ease all;
+    animation: jump-in 0.5s ease-in-out;
     visibility: visible;
   }
   
   .error-password-match.off {
-    animation: jump-out 0.5s ease all;
+    animation: jump-out 0.5s ease-in-out;
     visibility: hidden;
   }
 
