--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,10 +15,6 @@
   --font-family: 'Roboto', sans-serif;
 }
 
-*{
-  transition: .5s ease all;
-}
-
 #root{
   width: 100%;
   height: 100%;
